bugfix broken tooltips, they were invisible and hard coded width made it possible for text to overflow

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -9,8 +9,11 @@
   position: absolute;
   text-align: center;
   top: 95px;
-  width: 150px;
   z-index: 4;
+}
+
+.label{
+  color: #333;
 }
 
 .not-set {
